# spksrc

./: .dockerignore  .gitignore  .travis.yml  0001-migrate-requirements-for-crossenv-from-mk-crossenv-t.patch  4ol3dwqv.4nq.txt  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  README.rst  README.spk-toolchain.rst  Vagrantfile  azure-pipelines.yml  build-run-docker.sh  mkdocs.yml  swyzdx1t.wfl.txt  xor_checksum
.github/: ISSUE_TEMPLATE.md  PACKAGE_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  common-issue.md  config.yml  package-request.md  package-request.yml
.github/PULL_REQUEST_TEMPLATE/: framework.md  pull_request_template.md
.github/actions/: build-push-pr.sh  build-tag.sh  build.sh  build_status.sh  download.sh  generate_dependabot.py  prepare.sh  update_python_requirements.py
.github/workflows/: build.yml  cache-cleanup.yml  distrib-cache-cleanup.yml  distrib-cache-maintenance.yml  docker.yml  docs.yml  generate-dependabot.yml  lint.yml  python-requirements-updater.yml
common/: common.sh
cross/7za/: Makefile
cross/7zip/: Makefile  digests
cross/7zz/: Makefile  PLIST  digests
cross/HandBrakeCLI/: Makefile  PLIST  digests
cross/Khronos-OpenCL-Headers/: Makefile  digests
cross/Khronos-SPIRV-Headers/: Makefile  digests
cross/Khronos-SPIRV-Headers.src/: Makefile
cross/Khronos-SPIRV-LLVM-Translator-140/: Makefile  PLIST  digests
cross/Khronos-SPIRV-LLVM-Translator-140.src/: Makefile  digests
cross/Khronos-SPIRV-Tools/: Makefile  PLIST  digests
cross/Khronos-Vulkan-Headers/: Makefile  digests
cross/Khronos-Vulkan-Loader/: Makefile  PLIST  digests
cross/Khronos-Vulkan-Tools/: Makefile  PLIST  digests
cross/Khronos-glslang/: Makefile  PLIST  digests
cross/Lerc/: Makefile  PLIST  digests
cross/Linux-PAM/: Makefile  PLIST
cross/PyNaCl/: Makefile  PLIST  digests
cross/SPIRV-Headers.src/: Makefile  digests
cross/SPIRV-LLVM-Translator-140.src/: Makefile  digests
cross/SPIRV-LLVM-Translator.src/: Makefile  digests
cross/SPIRV-Tools/: Makefile  digests
cross/acl/: Makefile  PLIST  digests
cross/aclk-schemas/: Makefile  digests
cross/activebackup-prometheus-exporter/: Makefile  PLIST  digests
cross/adguardhome/: Makefile  PLIST  digests
cross/adminer/: Makefile  PLIST  digests
cross/adplug/: Makefile  PLIST  digests
cross/advancecomp/: Makefile  PLIST  digests
cross/alsa-lib/: Makefile  PLIST  digests  digests.back
cross/alsa-oss/: Makefile  PLIST  digests  digests.back
cross/alsa-utils/: Makefile  PLIST  digests  digests.back
cross/apparmor-binutils/: Makefile  PLIST
cross/apparmor-parser/: Makefile  PLIST
cross/apparmor-profiles/: Makefile  PLIST  digests
cross/apparmor-utils/: Makefile  PLIST
cross/apr/: Makefile  PLIST  digests
cross/apr-util/: Makefile  PLIST  digests
cross/argon2/: Makefile  PLIST  digests
cross/demometa-all-cmake/src/: CMakeLists.txt  main.c
cross/demometa-ffmpeg-cmake/src/: CMakeLists.txt  main.c
cross/demometa-python-cmake/src/: CMakeLists.txt  main.c
cross/demometa-python-meson/src/: main.c  meson.build
cross/demometa-videodriver-cmake/src/: CMakeLists.txt  main.c
cross/qbittorrent-pwhash/src/: Cargo.toml
cross/qbittorrent-pwhash/src/src/: main.rs
distrib/: libdrm-2.4.67.tar.bz2  libva-1.67.0.pre1.tar.bz2
docs/: CNAME  index.md  tags.md
icontemplate/: icon.psd
mk/: build-target-determinator.bash  dependency-list.sh  get_resources.py  spksrc.archs.mk  spksrc.base.mk  spksrc.bool.mk  spksrc.build.mk  spksrc.checksum.mk  spksrc.common-rules.mk  spksrc.common.mk  spksrc.compile.mk  spksrc.configure.mk  spksrc.copy.mk  spksrc.cross-cc.mk  spksrc.cross-cmake-env.mk  spksrc.cross-cmake-toolchainfile.mk  spksrc.cross-cmake.mk  spksrc.cross-dotnet-env.mk  spksrc.cross-dotnet.mk  spksrc.cross-env.mk  spksrc.cross-go-env.mk  spksrc.cross-go.mk  spksrc.cross-install.mk  spksrc.cross-kernel-configure.mk  spksrc.cross-kernel-module.mk  spksrc.cross-kernel.mk  spksrc.cross-meson-crossfile.mk  spksrc.cross-meson-env.mk  spksrc.cross-meson-ninja.mk  spksrc.cross-meson.mk  spksrc.cross-ninja.mk  spksrc.cross-rust-env.mk  spksrc.cross-rust.mk  spksrc.cross-virtual.mk  spksrc.crossenv.mk  spksrc.depend.mk  spksrc.dependency-tree.mk  spksrc.directories.mk  spksrc.download.mk  spksrc.extract.mk  (+82 more)
tests/: test_invariant_mounting.py
toolchains/: Makefile  syno-88f6282
(+11174 files in other folders)
